sbt assembly FIXED